# forgebase2

./: .dockerignore  .env.example  Cargo.toml  DASHBOARD_SETUP.md  DEVELOPMENT.md  Dockerfile  INDEX.md  Makefile  PRD.md  QUICKSTART.md  README.md  START_HERE.md  USAGE.md  docker-compose.yml
crates/forgebase-api/: Cargo.toml
crates/forgebase-api/src/: graphql.rs  lib.rs  middleware.rs  routes.rs  server.rs
crates/forgebase-auth/: Cargo.toml
crates/forgebase-auth/src/: email.rs  handlers.rs  jwt.rs  lib.rs  mfa.rs  middleware.rs  models.rs  oauth.rs  password.rs  repository.rs  service.rs  session.rs
crates/forgebase-auth/templates/: magic_link.html  password_reset.html  verification_email.html
crates/forgebase-cli/: Cargo.toml
crates/forgebase-core/: Cargo.toml
crates/forgebase-core/src/: config.rs  error.rs  lib.rs  types.rs  utils.rs
crates/forgebase-dashboard/: Cargo.toml
crates/forgebase-db/: Cargo.toml
crates/forgebase-db/src/: backups.rs  init.rs  lib.rs  migrations.rs  pool.rs  query.rs  realtime.rs  schema.rs
crates/forgebase-edge/: Cargo.toml
crates/forgebase-functions/: Cargo.toml
crates/forgebase-functions/src/: deploy.rs  executor.rs  handler.rs  isolate.rs  lib.rs  models.rs  runtime.rs
crates/forgebase-sites/: Cargo.toml
crates/forgebase-sites/src/: builder.rs  deployment.rs  domain.rs  handlers.rs  lib.rs  models.rs  repository.rs  service.rs  ssr.rs
crates/forgebase-storage/: Cargo.toml
crates/forgebase-storage/src/: bucket.rs  cdn.rs  handlers.rs  lib.rs  models.rs  service.rs  upload.rs
dashboard/: Dockerfile  README.md  SETUP.md  index.html  package-lock.json  package.json  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/auth/: layout.tsx
dashboard/app/auth/login/: page.tsx
dashboard/app/auth/signup/: page.tsx
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/app/lib/: api-client.ts  auth-store.ts
dashboard/components/: MuiProvider.tsx
dashboard/lib/: api.ts  auth-store.ts  theme.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: DashboardLayout.tsx
dashboard/src/pages/: Dashboard.tsx  Login.tsx  Settings.tsx  Sites.tsx  Users.tsx
dashboard/src/store/: auth.ts
docs/: DEPLOYMENT.md
migrations/: 001_create_auth_tables.sql  002_create_sites_tables.sql
scripts/: quickstart.sh
src/: app.rs  main.rs
