[workspace]
members = [
    "crates/forgebase-core",
    "crates/forgebase-db",
    "crates/forgebase-auth",
    "crates/forgebase-storage",
    "crates/forgebase-functions",
    "crates/forgebase-api",
    "crates/forgebase-edge",
    "crates/forgebase-sites",
    "crates/forgebase-cli",
    "crates/forgebase-dashboard",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codeforge-ide/forgebase2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
sea-query = "0.30"

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
constant_time_eq = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0"

# Storage
object_store = { version = "0.9", features = ["aws", "gcp", "azure"] }
bytes = "1.5"

# WASM & Functions
wasmtime = "17.0"
wasmer = "4.2"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls"], default-features = false }

# Templating
tera = "1.19"
handlebars = "5.1"

# Utilities
regex = "1.10"
url = "2.5"
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.4"
once_cell = "1.19"

# Testing
mockall = "0.12"
wiremock = "0.6"
