[package]
name = "forgebase-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgebase-core = { path = "../forgebase-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
