[package]
name = "forgebase-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgebase-core = { path = "../forgebase-core" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
constant_time_eq = { workspace = true }
validator = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
tera = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
