[package]
name = "forgebase-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgebase-core = { path = "../forgebase-core" }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
