[package]
name = "forgebase-functions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgebase-core = { path = "../forgebase-core" }
tokio = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
base64 = "0.21"
